0029157: Modeling - suspicious pass-through of case labels in switch statements

Suspicious passes through case labels have been resolved either by using Standard_FALLTHROUGH macro or by redesigning the code.